--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.6",
-    "got": "^11.8.2"
+    "got": "^11.8.2",
+    "lodash": "^4.17.21"
   }
 }
